Fixed the jump to top when a link was clicked.

--- a/css/default.css
+++ b/css/default.css
@@ -149,8 +149,7 @@ section {
 .modal {
 	display: none; /* Hidden by default */
 	position: fixed; /* Stay in place */
-	z-index: 1; /* Sit on top */
-	padding-top: 25%; /* Location of the box */
+	z-index: 1;
 	left: 0;
 	top: 0;
 	width: 100%; /* Full width */
